--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -38,7 +38,7 @@ ul.infobar {
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin-block: 0;
   color: var(--colour-subtext0);
   li:not(:last-child)::after {
     content: "⯁";
