--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -2,3 +2,9 @@ article.post .hi {
   padding: 1px 0 1rem 0;
   margin: 2rem 0 1rem 0;
 }
+
+article {
+  ol, ul {
+    box-sizing: border-box;
+  }
+}
